# syntax-notes

./: .gitignore  documentation.md  mkdocs.yml  postgres.md  pyproject.toml  requirements.txt
docs/: documentation.md
docs/elasticsearch/: esSearch.md
docs/javascript/express/: expressCodeChallenge.md  expressMiddleware.md  expressRoutes.md
docs/javascript/js/: jsArrays.md  jsAsyncAwait.md  jsConditionals.md  jsFunctions.md  jsIterators.md  jsLoops.md  jsObjects.md  jsPromises.md
docs/javascript/learnvue/: vueData.md
docs/javascript/vueComponentFundamentals/: vueCompIndex.md
docs/python/pandas/: pandas_aggregates.md  pandas_basics.md  pandas_merges.md
elasticsearch/: esIndex.md  esIndices.md  esSearch.md
javascript/: vueFundamentals.md
javascript/express/: expressCodeChallenge.md  expressIndex.md  expressMiddleware.md  expressRouterParameters.md  expressRouters.md  expressRoutes.md  index.md
javascript/js/: index.md  jsArrays.md  jsAsyncAwait.md  jsBasics.md  jsFunctions.md  jsIndex.md  jsModules.md  jsPromises.md  jsRequests.md  jsTranspilation.md
javascript/learnvue/: vueBasics.md  vueForms.md  vueIndex.md  vueStylingElements.md
javascript/vue/: vueBasics.md  vueForms.md  vueIndex.md
javascript/vueComponentFundamentals/: vueCompBasics.md  vueCompIndex.md
python/: pandas.md
python/pandas/: README.md  pandas_aggregates.md  pandas_basics.md  pandas_index.md  pandas_merges.md  pandas_modification.md  pandas_selection.md
src/javascript/js/: jsModuleMenu.js  jsModuleOrder.js  jsPromiseExample1.js
src/javascript/vuefundamentals/: lesson10a.html  (+13 more)
(+21 files in other folders)
