[tool.poetry]
name = "mixed"
version = "0.1.0"
description = ""
authors = ["Kurt Klein <fuji.film.fan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "7.1.1"
future = "0.18.2"
Jinja2 = "2.11.2"
joblib = "0.14.1"
livereload = "2.6.1"
lunr = "0.5.6"
Markdown = "3.2.1"
markdown-include = "0.5.1"
MarkupSafe = "1.1.1"
mkdocs = "1.2.3"
mkdocs-material = "5.1.1"
mkdocs-material-extensions = "1.0b2"
nltk = "3.5"
Pygments = "2.6.1"
pymdown-extensions = "7.1"
PyYAML = "5.3.1"
regex = "2020.4.4"
six = "1.14.0"
tornado = "6.0.4"
tqdm = "4.45.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
